<resources>
    <string name="a">Navigate home</string>
    <string name="b">%1$s, %2$s</string>
    <string name="c">%1$s, %2$s, %3$s</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k">Search…</string>
    <string name="l">Clear query</string>
    <string name="m">Search query</string>
    <string name="n">Search</string>
    <string name="o">Submit query</string>
    <string name="p">Voice search</string>
    <string name="q">Share with</string>
    <string name="r">Share with %s</string>
    <string name="s">Collapse</string>
    <string name="t">Search</string>
    <string name="u">999+</string>
    <string name="v">"What's Happening?"</string>
    <string name="w">Like Tweet</string>
    <string name="x">Undo Like</string>
    <string name="y">Loading Tweet</string>
    <string name="z">Log in with Twitter</string>
    <string name="a0">140</string>
    <string name="a1">pause</string>
    <string name="a2">play</string>
    <string name="a3">Tweet</string>
    <string name="a4">Privacy Icon</string>
    <string name="a5">MM/dd/yy</string>
    <string name="a6">MMM dd</string>
    <string name="a7">replay</string>
    <string name="a8">Retweeted by %1$s</string>
    <string name="a9">"Check out @%1$s's Tweet: https://twitter.com/%1$s/status/%2$s"</string>
    <string name="a_">Tweet from %1$s (@%2$s)</string>
    <string name="aa">Share Tweet</string>
    <string name="ab">This is a sponsored ad</string>
    <string name="ac">%1$s. %2$s. %3$s.</string>
    <string name="ad">Tweet Media</string>
    <string name="ae">sans-serif</string>
    <string name="af">sans-serif-medium</string>
    <string name="ag">sans-serif-medium</string>
    <string name="ah">sans-serif</string>
    <string name="ai">sans-serif</string>
    <string name="aj">sans-serif</string>
    <string name="ak">sans-serif</string>
    <string name="al">sans-serif-light</string>
    <string name="am">sans-serif</string>
    <string name="an">sans-serif</string>
    <string name="ao">sans-serif</string>
    <string name="ap">sans-serif-medium</string>
    <string name="aq">飞行器自检失败，请尝试重启</string>
    <string name="ar">飞行器自检失败，请降落</string>
    <string name="as">加速度计振动异常大</string>
    <string name="at">Airstrike</string>
    <string name="au">Carpet Bomb</string>
    <string name="av">Clear</string>
    <string name="aw">Load</string>
    <string name="ax">Run</string>
    <string name="ay">Save</string>
    <string name="az">Settings</string>
    <string name="b0">Spaghetti</string>
    <string name="b1">删除失败</string>
    <string name="b2">删除成功</string>
    <string name="b3">删除所选的文件吗？</string>
    <string name="b4">下载</string>
    <string name="b5">视频%1$s个，图片%2$s张</string>
    <string name="b6">已选择%1$s个文件,需要%2$s空间</string>
    <string name="b7">已选择%s个文件</string>
    <string name="b8">美国手</string>
    <string name="b9">飞行器摆放不平，请平稳静放</string>
    <string name="b_">Mi8Test</string>
    <string name="ba">遥控小飞机</string>
    <string name="bb">V1.0.5.20200</string>
    <string name="bc">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bd">@string/bf</string>
    <string name="be">V029SDSUBt1ONe65PS08AzKY</string>
    <string name="bf">V029SDSUBt1ONe65PS08AzKY</string>
    <string name="bg">@string/bi</string>
    <string name="bh">10233437</string>
    <string name="bi">10233437</string>
    <string name="bj">@string/bl</string>
    <string name="bk">3aad7c538037c232f8601337b1fbf61f</string>
    <string name="bl">3aad7c538037c232f8601337b1fbf61f</string>
    <string name="bm">飞行器自检失败，请尝试重启</string>
    <string name="bn">飞行器自检失败，请降落</string>
    <string name="bo">气压计波动过大</string>
    <string name="bp">气压计测试未通过</string>
    <string name="bq">飞行器温度过低，无法起飞</string>
    <string name="br">电池电量低</string>
    <string name="bs">电池电量低，请小心</string>
    <string name="bt">电池温度过高，请小心</string>
    <string name="bu">电池温度过高，请降落</string>
    <string name="bv">电池温度过低，请更换</string>
    <string name="bw">电池温度过低，请降落</string>
    <string name="bx">电池严重低电，请充电</string>
    <string name="by">电池严重低电，正在自动降落</string>
    <string name="bz">取消</string>
    <string name="c0">确定</string>
    <string name="c1">下降</string>
    <string name="c2">上升</string>
    <string name="c3">Blockly blocks</string>
    <string name="c4">逆时针</string>
    <string name="c5">顺时针</string>
    <string name="c6">do something</string>
    <string name="c7">较快</string>
    <string name="c8">一般</string>
    <string name="c9">后退</string>
    <string name="c_">前进</string>
    <string name="ca">摇杆值 |</string>
    <string name="cb">向左</string>
    <string name="cc">向右</string>
    <string name="cd">较慢</string>
    <string name="ce">速度 |</string>
    <string name="cf">Blocks</string>
    <string name="cg">android.support.design.widget.BottomSheetBehavior</string>
    <string name="ch">飞行器自检失败，需水平校准</string>
    <string name="ci">飞行器自检失败，请降落</string>
    <string name="cj">取消</string>
    <string name="ck">"Can't delete the variable \"%1$s\" because it's part of the definition of the function \"%2$s\"."</string>
    <string name="cl">%1$d / %2$d</string>
    <string name="cm">为节省电量，飞行器将自动关机。</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">gA4cyvmoEzqODwurtvjJGaXyE</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY_GH2">ln9AcAw39Xb2VeQzCWUBlnto1</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">A4T5wESDtpELQB4L3IrPNnCfftSVY9rSGwwLKwrCi647s5aa4L</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET_GH2">tZXOefFH1lSOLaMff96x3YFc8osFXamYjNaetw5XpBM7m3PmP8</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="cn">已连接设备</string>
    <string name="co">连接失败</string>
    <string name="cp">"请连接字样为 MiDroneMini_XXXXXX 的 Wi-Fi
默认密码为 123456789"</string>
    <string name="cq">连接中...</string>
    <string name="cr">搜索</string>
    <string name="cs">选择国家和地区</string>
    <string name="ct">New variable</string>
    <string name="cu"><g id="xxx">%s</g>米</string>
    <string name="cv">今天</string>
    <string name="cw">Delete variable…</string>
    <string name="cx">Delete variable %1$s and %2$d blocks using it?</string>
    <string name="cy">Cancel</string>
    <string name="cz">Delete</string>
    <string name="d0">Delete variable</string>
    <string name="d1">米兔遥控小飞机</string>
    <string name="d2">迷你酷玩具，溜到飞起</string>
    <string name="d3">米家手持手机云台</string>
    <string name="d4">米兔遥控小飞机</string>
    <string name="d5">固件大小：%1$s</string>
    <string name="d6">请对准圆心，保持三秒启动重力感应</string>
    <string name="d7">请保持手机水平，点击屏幕后再按住右摇杆开始重力感应操控</string>
    <string name="d8">重力感应启动中...</string>
    <string name="d9">飞行模式</string>
    <string name="d_">English</string>
    <string name="da">确定</string>
    <string name="db">飞米Id不能为空</string>
    <string name="dc">客户端传数⾮法数据</string>
    <string name="dd">MD5签名校验不通过</string>
    <string name="de">系统出错，数据库异常等</string>
    <string name="df">系统正常响应</string>
    <string name="dg">邮箱输入过长，最大长度不能大于50</string>
    <string name="dh">邮箱不能为空</string>
    <string name="di">邮箱格式不正确，请重新输入</string>
    <string name="dj">手机不能为空</string>
    <string name="dk">两次输入的密码不一致，请重新输⼊入</string>
    <string name="dl">密码不能为空</string>
    <string name="dm">请输入正确的⼿手机号</string>
    <string name="dn">密码错误，请重新输入</string>
    <string name="do">验证码已过期，请重新获取</string>
    <string name="dp">验证码无效，请重新获取</string>
    <string name="dq">账户已存在</string>
    <string name="dr">账号不存在</string>
    <string name="ds">验证码不能为空</string>
    <string name="dt">验证码错误，请重新输入</string>
    <string name="du">获取验证码过于频繁，请稍后尝试</string>
    <string name="dv">您输入错误密码次数过多，请5分钟后再试，或尝试找回密码</string>
    <string name="dw">205767510239683</string>
    <string name="dx">197370117714601</string>
    <string name="dy">飞行器姿态异常，请小心</string>
    <string name="dz">放大焦距可能影响跟踪效果</string>
    <string name="e0">请前往系统设置中开启定位服务</string>
    <string name="e1">APK下载失败</string>
    <string name="e2">APK下载成功</string>
    <string name="e3">下载中</string>
    <string name="e4">APK下载中</string>
    <string name="e5">APP升级</string>
    <string name="e6">去设置</string>
    <string name="e7">手机内存不足，无法拍照</string>
    <string name="e8">请前往系统设置中开启拍照／录像权限</string>
    <string name="e9">请前往系统设置中开启位置信息服务</string>
    <string name="hk">取消</string>
    <string name="hs">选中0个项目</string>
    <string name="ht">全选</string>
    <string name="hx">Facebook</string>
    <string name="hy">Instagram</string>
    <string name="hz">QQ</string>
    <string name="i0">微博</string>
    <string name="i1">Twitter</string>
    <string name="i2">微信</string>
    <string name="i3">朋友圈</string>
    <string name="i4">Youtube</string>
    <string name="l5">取消</string>
    <string name="lf">请输入新密码(8-16位数字)</string>
    <string name="mg">安全须知</string>
    <string name="mu">请勿在机场、人口密集等政策法规禁止的区域飞行。请确保小飞机在飞行时与周围的人、动物、树木、车辆和建筑物等保持一定距离，以防止高速旋转的螺旋桨造成损害。</string>
    <string name="mw">我的位置</string>
    <string name="mx">禁飞区域，禁止飞行</string>
    <string name="my">请选择在光线良好、地面纹理清晰且无风的环境下进行飞行。</string>
    <string name="n0">操作</string>
    <string name="n3">摇杆操作</string>
    <string name="n8">向左</string>
    <string name="n9">向右</string>
    <string name="n_">后退</string>
    <string name="na">前进</string>
    <string name="nb">"顺时针
旋转"</string>
    <string name="nc">"逆时针
旋转"</string>
    <string name="nd">下降</string>
    <string name="ne">上升</string>
    <string name="oo">飞行器飞行时，不能修改Wi-Fi名称或密码</string>
    <string name="pa">2.4G</string>
    <string name="pb">5.8G</string>
    <string name="pc">我已阅读并了解</string>
    <string name="pd">"1.请遵守您所在地区的当地法律来使用5.8Gwifi信号频段
2.请确保您的手机支持5.8Gwifi信号频段，否则切换后您将无法搜索到设备的wifi信号
3.误切换后无法搜索到设备wifi，请短按设备开机按钮8次恢复出厂设置（0.5秒/次或1秒/次）"</string>
    <string name="pe">温馨提示</string>
    <string name="pf">Wi-Fi频段</string>
    <string name="pg">(小提示：短按小飞机开机按钮8次可以恢复出厂设置)</string>
    <string name="qk">Wi-Fi名称</string>
    <string name="ql">Wi-Fi密码</string>
</resources>