<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:id="@id/lc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" app:layout_marginTopPercent="7.0370374%h">
        <TextView android:textSize="@dimen/hc" android:textColor="@color/ev" android:id="@id/ld" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3" />
        <TextView android:textSize="@dimen/hc" android:textColor="@color/es" android:id="@id/le" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/8" />
        <TextView android:textSize="@dimen/hg" android:textColor="@color/ew" android:layout_gravity="center" android:id="@id/kn" android:paddingLeft="9.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n3" android:layout_alignTop="@id/l3" android:layout_alignBottom="@id/l3" />
    </LinearLayout>
    <ImageView android:id="@id/lv" android:background="@drawable/uw" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_widthPercent="46.29%h" app:layout_heightPercent="46.38%h" app:layout_marginLeftPercent="24.90%h" app:layout_marginTopPercent="35.64%h" />
    <ImageView android:id="@id/lw" android:background="@drawable/uu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" app:layout_widthPercent="46.29%h" app:layout_heightPercent="46.38%h" app:layout_marginTopPercent="35.64%h" app:layout_marginRightPercent="24.90%h" />
    <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" app:layout_widthPercent="46.29%h" app:layout_heightPercent="58.425%h" app:layout_marginLeftPercent="24.90%h" app:layout_marginTopPercent="29.81%h">
        <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/lx" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ne" />
        <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/ly" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nd" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/lz" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nc" android:layout_alignRight="@id/lv" app:layout_marginTopPercent="55.09%h" app:layout_marginRightPercent="49.07%h" />
    <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/m0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/nb" android:layout_toRightOf="@id/lv" app:layout_marginTopPercent="55.09%h" />
    <RelativeLayout android:layout_width="166.66998dip" android:layout_height="fill_parent" android:layout_marginRight="89.599976dip" android:layout_alignParentRight="true" app:layout_widthPercent="46.29%h" app:layout_heightPercent="58.425%h" app:layout_marginTopPercent="29.81%h" app:layout_marginRightPercent="24.90%h">
        <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/m1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/na" />
        <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/m2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="304.66406dip" android:text="@string/n_" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/m3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="205.29999dip" android:layout_marginRight="10.0dip" android:text="@string/n8" android:layout_toLeftOf="@id/lw" app:layout_marginTopPercent="56.99%h" />
    <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/eu" android:gravity="center" android:id="@id/m4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n9" android:layout_alignLeft="@id/lw" app:layout_marginLeftPercent="49.07%h" app:layout_marginTopPercent="56.9%h" />
    <com.fimi.widget.LetterSpacingTextView android:textSize="@dimen/h9" android:textColor="#ff3a3a3a" android:gravity="center" android:id="@id/lf" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/n0" android:layout_centerHorizontal="true" app:layout_marginTopPercent="18.3333333%h" />
</com.fimi.kernel.percent.PercentRelativeLayout>