<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/il" android:background="#ff15afcb" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="12.0sp" android:textColor="#e6ffffff" android:gravity="center" android:id="@id/im" android:background="@drawable/ag" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginRight="10.0dip" android:text="@string/ht" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <Button android:textSize="12.0sp" android:textColor="#e6ffffff" android:gravity="center" android:id="@id/in" android:background="@drawable/ag" android:layout_width="48.0dip" android:layout_height="28.0dip" android:layout_marginLeft="10.0dip" android:text="@string/hk" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <TextView android:textSize="14.0sp" android:textColor="#e6ffffff" android:id="@id/io" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs" android:layout_centerInParent="true" />
    <TextView android:background="#26ffffff" android:layout_width="fill_parent" android:layout_height="0.30000007dip" android:layout_alignParentBottom="true" />
</RelativeLayout>