<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fimi.kernel.percent.PercentRelativeLayout android:paddingBottom="16.363617dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true"
      xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout android:gravity="center_horizontal" android:id="@id/lc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="58.90909dip">
            <TextView android:textSize="@dimen/hc" android:textColor="@color/ev" android:id="@id/ld" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" />
            <TextView android:textSize="@dimen/hc" android:textColor="@color/es" android:id="@id/le" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/8" />
            <TextView android:textSize="@dimen/hg" android:textColor="@color/ew" android:layout_gravity="center" android:id="@id/kn" android:paddingLeft="@dimen/h_" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mg" android:layout_alignTop="@id/l3" android:layout_alignBottom="@id/l3" />
        </LinearLayout>
        <com.fimi.widget.LetterSpacingTextView android:textSize="@dimen/h9" android:textColor="@color/et" android:id="@id/lf" android:layout_width="262.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/hb" android:layout_marginTop="12.636353dip" android:text="@string/mu" android:layout_below="@id/lc" />
        <com.fimi.widget.LetterSpacingTextView android:textSize="@dimen/h9" android:textColor="@color/eu" android:id="@id/li" android:layout_width="262.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/hb" android:layout_marginTop="11.181793dip" android:text="@string/my" android:layout_below="@id/lf" />
    </com.fimi.kernel.percent.PercentRelativeLayout>
    <com.fimi.widget.LetterSpacingTextView android:textSize="12.0dip" android:textColor="@color/et" android:gravity="center" android:id="@id/lh" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:text="@string/mw" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" app:layout_widthPercent="97.407%h" />
    <com.fimi.widget.LetterSpacingTextView android:textSize="10.0dip" android:textColor="#80ffffff" android:gravity="center" android:id="@id/lj" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/mx" android:layout_alignParentRight="true" app:layout_widthPercent="97.407%h" app:layout_marginTopPercent="20.55%h" />
    <ImageView android:id="@id/lk" android:background="@drawable/uq" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_alignParentRight="true" app:layout_widthPercent="88.79%h" app:layout_heightPercent="90.37%h" />
</com.fimi.kernel.percent.PercentRelativeLayout>